--- a/plugins/balloontoolbar/skins/default.css
+++ b/plugins/balloontoolbar/skins/default.css
@@ -93,3 +93,9 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 {
 	border-width: 0 7px 7px;
 }
+
+/* reset position for dialog in balloontolbar */
+.cke_balloon_content .cke_dialog_position_fixed
+{
+	position: static;
+}
